# photo-manager

./: .editorconfig  .env  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  eslint.config.mjs  index.html  nuxt.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.mts  vite.config.ts
.impeccable/: design.json
migrations/2026-04-01-233343-0000_Initial/: down.sql
src/: App.vue  app.rs  auto-imports.d.ts  components.d.ts  main.rs  main.ts  models.rs  router.rs  routes.ts  schema.rs  typed-router.d.ts  window.rs
src-tauri/: Cargo.toml  tarpaulin-report.html  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/2026-04-01-233343-0000_Initial/: up.sql
src-tauri/src/: database.rs  group.rs  main.rs  models.rs  people.rs  photos.rs  places.rs  prerelease-conv.sql  schema.rs  settings.rs  tags.rs  types.rs
src-tauri/src/app/: api.rs  mod.rs  search.rs
src-tauri/src/people/: api.rs  mod.rs
src-tauri/src/photos/: api.rs  mod.rs
src-tauri/src/places/: api.rs  mod.rs
src-tauri/src/settings/: api.rs  mod.rs
src-tauri/src/tags/: api.rs  mod.rs
src/api/: app.ts  people.ts  photos.ts  places.ts  settings.ts  tags.ts
src/classes/: APIResult.ts  Activity.ts  Camera.ts  ColorableItem.ts  Entity.ts  Graph.ts  GraphNode.ts  Group.ts  Journal.ts  JournalEntry.ts  Layer.ts  Map.ts  Person.ts  PersonCategory.ts  Photo.ts  Place.ts  Scrobble.ts  Setting.ts  Shape.ts  SortableItem.ts  Tag.ts  TauriDatabase.ts  WikiPage.ts
src/components/: AutosaveText.vue  ColorOptions.vue  ColorPicker.vue  DecryptionDialog.vue  DirectoryPanels.vue  MarkdownEditor.vue  MoodIcon.vue  PeopleInput.vue  PhotoDetail.vue  PhotoGrid.vue  PhotoGroup.vue  PhotoIcon.vue  PhotoView.vue  SearchInput.vue  SortedCombo.vue  TagGraph.vue  TagInput.vue  WikiFolder.vue  mod.rs
src/components/common/: ColorOptions.vue  ErrorHint.vue  FormDialog.vue  LocationInput.vue  SortedCombo.vue
src/components/core/: body.rs  div.rs  mod.rs  navigation_drawer.rs  router_view.rs  text_node.rs  transition.rs
src/components/md/: icon.rs  layout.rs  list.rs  main.rs  mod.rs  navigation_drawer.rs  snackbar.rs  spacer.rs
src/components/photos/: PhotoDetail.vue  PhotoGrid.vue  PhotoIcon.vue  SearchBar.vue
src/components/tags/: TagGraph.vue  TagInput.vue
src/layouts/: default.vue
src/pages/: LandingView.vue  Tagger.vue  calendar.vue  index.vue  journal.vue  locations.vue  people.vue  settings.vue  stats.vue  tagger.vue  tags.vue  wiki.vue
src/pages/calendar/: index.vue
src/pages/collection/: index.vue
src/pages/journal/: [date].vue  index.vue
src/pages/locations/: index.vue
src/pages/music/: index.vue
src/pages/people/: index.vue
src/pages/settings/: index.vue
src/pages/stats/: index.vue
src/pages/tagger/: index.vue
src/pages/tags/: index.vue
src/pages/wiki/: [...page].vue
src/plugins/: index.ts  vuetify.ts
src/router/: index.ts
src/stores/: fileStore.ts
src/styles/: color.rs  measurement.rs  mod.rs  settings.scss  styles.css  timing.rs  tokens.css  tokens.rs
src/types/: WikiItem.ts  photo-data.ts
src/util/: encrypt.ts
src/views/: CollectionView.vue  LandingView.vue  TaggerView.vue
