[package]
name = "photo-manager"
version = "1.0.0"
description = "Organize photos"
authors = ["nmde"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.102"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4.44"
diesel = { version = "2.3.9", features = ["sqlite"] }
diesel-async = { version = "0.9.0", features = ["sqlite"] }
diesel_migrations = { version = "2.3.2", features = ["sqlite"] }
fern = "0.7.1"
log = "0.4.30"
sdl3 = { version = "0.18.4", features = ["build-from-source-static", "ttf"] }
sdl3-ttf-sys = { version = "0.6", features = ["no-sdlttf-harfbuzz"] }
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "sync"] }

[dependencies.libsqlite3-sys]
version = "0.36.0"
features = ["bundled"]
