[package]
name = "photo-manager"
version = "1.0.0"
description = "A Tauri App"
authors = ["nmde"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sqlite = "0.37.0"
walkdir = "2.5.0"
regex = "1.11.3"
url-escape = "0.1.1"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "process"] }
rusty_pool = "0.7.0"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
