[package]
name = "photo-manager"
version = "1.0.0"
description = "A Tauri App"
authors = ["nmde"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.0.3"
walkdir = "2.5.0"
regex = "1.11.3"
url-escape = "0.1.1"
tokio = { version = "1.49.0", features = ["fs", "macros", "process"] }
rusty_pool = "0.7.0"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.8.0", features = ["sqlite", "sync-connection-wrapper", "tokio"] }
fern = "0.7.1"
log = "0.4.29"
lazy_static = "1.5.0"
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
anyhow = "1.0.102"
strum = { version = "0.28.0", features = ["derive"] }
exif = { git = "https://github.com/kamadak/exif-rs", version = "0.6.1" }

[dependencies.libsqlite3-sys]
version = "0.36.0"
features = ["bundled"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
